# ap_py

./: pyproject.toml
architecture_patterns/: flask_app.py  model.py  orm.py  repository.py  services.py
architecture_patterns/adapters/: orm.py  repository.py
architecture_patterns/api/: flask_app.py
architecture_patterns/domain/: model.py
architecture_patterns/service_layer/: services.py  unit_of_work.py
tests/: test_architecture_patterns.py  test_services.py
