[tool.poetry]
name = "architecture_patterns"
version = "0.1.0"
description = ""
authors = ["15bubbles <15bubbles.15bubbles@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.12b0"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
