[tool.poetry]
name = "architecture_patterns"
version = "0.1.0"
description = ""
authors = ["15bubbles <15bubbles.15bubbles@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.31"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
